<resources>
    <string name="app_name">trabalhoambientesmoveis</string>
    <string name="e_mail">E-mail</string>
    <string name="digite_seu_email">Digite seu email...</string>
    <string name="digite_sua_senha">Digite sua senha...</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="crie_sua_conta">Crie sua conta</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="insira_seus_dados_corretamente">Insira seus dados corretamente</string>
    <string name="seja_bem_vindo">Seja bem-vindo(a)</string>
    <string name="insira_seu_e_mail_cadastrado_no_nosso_app_que_enviaremos_uma_nova_senha_para_seu_cadastro">Insira seu E-mail cadastrado no nosso app que enviaremos uma nova senha para seu cadastro</string>
    <string name="recupere_sua_senha">Recupere sua Senha</string>
    <string name="enviar_nova_senha">Enviar nova senha</string>
    <string name="crie_uma_conta">Crie uma conta</string>
    <string name="registre_se">Registre-se</string>
    <string name="digite_seu_nome">Digite seu nome...</string>
    <string name="nome">Nome</string>
    <string name="criar">Criar</string>
    <string name="escolha_uma_categoria_abaixo_para_seguir_a_navega_o">Escolha uma categoria abaixo para seguir a navegação</string>
    <string name="pilsen">Pilsen</string>
    <string name="lager">Lager</string>
    <string name="puro_malte">Puro Malte</string>
    <string name="ipa">IPA</string>
    <string name="pre_o">Preço:</string>
    <string name="ingredientes">Ingredientes:</string>
    <string name="ibu">IBU:</string>
    <string name="nome6">Nome:</string>
    <string name="amber">Amber</string>
    <string name="informa_es">Informações</string>
    <string name="detalhes_cervejas">Detalhes Cervejas :)</string>
    <string name="asss">Informações</string>
    <string name="informa_es_do_app">Informações do app</string>
    <string name="textao">Neste App utilizamos APIs criada por nós mesmos no Site \'mocky\'.\n Aplicamos também uma API feita pelo professor Dirceu para a realização do cadastro do Usuário.</string>
    <string name="app_produzido_por_thiago_silv_rio_alexandre_de_souza_e_gabriel_gonzalez">App produzido por: Thiago Silvério, Alexandre de Souza e Gabriel Gonzalez</string>
</resources>