<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.HomeActivity"
    android:background="@color/DarkGrey">

    <ImageButton
        android:id="@+id/backIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/transparent"
        android:src="@drawable/backicon">
    </ImageButton>

    <TextView
        android:id="@+id/LabelCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:textSize="16sp"
        android:text="@string/crie_uma_conta"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/Orange">
    </TextView>

    <TextView
        android:id="@+id/labelTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="160dp"
        android:text="@string/registre_se"
        android:textSize="30sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/Orange"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textAlignment="center">
    </TextView>

    <RelativeLayout
        android:id="@+id/relativeName"
        android:layout_width="335dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/labelTop"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_textboxlayout">

        <TextView
            android:id="@+id/labelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:layout_marginTop="8.4dp"
            android:layout_marginLeft="20dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.3dp"
            android:layout_marginHorizontal="20dp"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:hint="@string/digite_seu_nome"
            android:background="@color/transparent"
            android:textColor="@color/black">
        </EditText>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeEmail"
        android:layout_width="335dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/relativeName"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_textboxlayout">

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:layout_marginTop="8.4dp"
            android:layout_marginLeft="20dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.3dp"
            android:layout_marginHorizontal="20dp"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:hint="@string/digite_seu_email"
            android:background="@color/transparent"
            android:textColor="@color/black">
        </EditText>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativePassword"
        android:layout_width="335dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/relativeEmail"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_textboxlayout">

        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:layout_marginTop="8.4dp"
            android:layout_marginLeft="20dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30.3dp"
            android:layout_marginHorizontal="20dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:hint="@string/digite_sua_senha"
            android:background="@color/transparent"
            android:textColor="@color/black">
        </EditText>

    </RelativeLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_below="@+id/relativePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:text="@string/criar"
        android:textColor="@color/DarkGrey"
        android:textSize="15sp"
        android:background="@drawable/background_btnbox">
    </Button>

</RelativeLayout>